Fixing contrast issues in startups landing page

--- a/pages/startups/Startups.module.css
+++ b/pages/startups/Startups.module.css
@@ -81,7 +81,7 @@
     font-family: Nunito Sans;
     font-size: 65px;
     font-weight: 600;
-    color: var(--logo-orange-color);
+    color: var(--sun-red-color);
 }
 @media screen and (max-width: 576px) {
     .containerTitle > h1 {
@@ -194,7 +194,7 @@
 .headerParagraphs > p {
     font-family: Nunito Sans;
     font-size: 24px;
-    color: var(--logo-orange-color);
+    color: var(--sun-red-color);
 }
 .headerParagraphs > p + p {
     margin-top: var(--space-16);
@@ -303,7 +303,7 @@
 }
 .howItWorksStepSeparator > [class*="line"] {
     margin: 0px auto;
-    background-color: var(--logo-orange-color);
+    background-color: var(--sun-red-color);
 }
 @media screen and (max-width: 992px) {
     .howItWorksStepSeparator > [class*="line"] {
@@ -328,15 +328,15 @@
     max-height: 40px;
     margin: var(--space-16) 0px 0px 0px;
     font-size: 20px;
-    color: var(--logo-orange-color);
+    color: var(--sun-red-color);
     border: var(--border-1);
-    border-color: var(--logo-orange-color);
+    border-color: var(--sun-red-color);
     border-radius: var(--radius-20);
     background-color: var(--light-red-color);
 }
 .howItWorksStep:last-of-type > .howItWorksStepSeparator > i {
     color: var(--perfect-white-color);
-    background-color: var(--logo-orange-color);
+    background-color: var(--sun-red-color);
 }
 @media screen and (max-width: 992px) {
     .howItWorksStepSeparator > i {
@@ -406,7 +406,7 @@
     max-height: 128px;
     position: relative;
     font-size: 60px;
-    color: var(--logo-orange-color);
+    color: var(--sun-red-color);
     z-index: 1;
 }
 .badge > i::before {
@@ -448,5 +448,5 @@
 .badge > [class*="line"] {
     position: absolute;
     top: calc((128px / 2) - var(--space-16));
-    background-color: var(--logo-orange-color);
+    background-color: var(--sun-red-color);
 }
