--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -63,7 +63,7 @@
     /* -------------------------------------------------------------------------------------------------------------------------------------------- */
     --light-red-color: #FFEFE6;
     --pale-red-color: #FFCFD1;
-    --sun-red-color: #FF5500;
+    --sun-red-color: #F1590A;
     /* -------------------------------------------------------------------------------------------------------------------------------------------- */
     /* Text Colors */
     /* -------------------------------------------------------------------------------------------------------------------------------------------- */
